--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -112,5 +112,6 @@
   "log": "Log",
   "reverse_coordinate": "Reverse Coordinate",
   "grid_show": "Show Grids",
-  "restore_default": "Restore Defaults"
+  "restore_default": "Restore Defaults",
+  "clear_alarms": "Clear alarms"
 }
