feat: add trendline

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -84,6 +84,7 @@
   "any_waves": "Any Waves",
   "abcd": "ABCD Pattern",
   "xabcd": "XABCD Pattern",
+  "trendLine": "Trend Line",
   "weak_magnet": "Weak Magnet",
   "strong_magnet": "Strong Magnet",
   "symbol_search": "Symbol Search",
