--- a/src/i18n/zh-CN.json
+++ b/src/i18n/zh-CN.json
@@ -87,6 +87,7 @@
   "any_waves": "任意浪",
   "abcd": "ABCD形态",
   "xabcd": "XABCD形态",
+  "trendLine": "趋势线",
 
   "weak_magnet": "弱磁模式",
   "strong_magnet": "强磁模式",
